--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,9 @@ on: [push]
 
 jobs:
   build:
-    runs-on: swift-latest
+    runs-on: ubuntu-latest
+    container:
+      image: swift:latest
 
     steps:
       - uses: actions/checkout@v1
